fix android compatibility